k8/server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: server
  name: server
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    service: server
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      service: server
  strategy: {}
  template:
    metadata:
      labels:
        service: server
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_URL
                  name: server-env
            - name: DEV
              valueFrom:
                configMapKeyRef:
                  key: DEV
                  name: server-env
            - name: SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: SECRET_KEY
                  name: server-env
          image: wedotakeaway/wdt-server:0.0.1
          name: server
          resources: {}
      restartPolicy: Always
status: {}
