k8/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wdt
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: customer-webapp
              servicePort: 80
          - path: /graphql/
            backend:
              serviceName: server
              servicePort: 8000
